# Project-Nexus

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  NEXUS-Demo-Launch.bat  README.md  SECURITY.md  _gen_nexus6.js  docker-compose.yml  gen-nexus-v6.js  nexus-demo.html  nexus-v5.html  nexus-v6.html  nexus-v7.html  nexus-v8.html  project nexus.txt  wrangler.jsonc
.github/workflows/: ci.yml  cloudflare-pages.yml  deploy.yml  pages.yml
_chunks/: c00_head.js  c01_dochead.html  c02_css_layout.html  c03_css_nav.html  c04_css_components.html  c05_css_views.html  c06_css_training.html  c07_css_misc.html  c08_html_shell.html  c09_view_live.html  c10_view_mosaic.html  c11_view_switcher.html  c12_view_router.html  c13_view_rundown.html  c14_view_playout.html  c15_view_cloudmcr.html  c16_view_srt_scopes.html  c17_view_ptp_nmos.html  c18_view_devices_api.html  c19_view_orchestrate.html  c20_view_network.html  c21_view_compat_preflight.html  c22_view_training.html  c23_modals.html  c24_js_core.html  c25_js_nav.html  c26_js_switcher.html  c27_js_router.html  c28_js_rundown.html  c29_js_playout.html  c30_js_cloudmcr.html  c31_js_scopes.html  c32_js_nmos_ptp.html  c33_js_devices_api.html  c34_js_orchestrate.html  c35_js_compat_preflight.html  c36_js_srt.html  c37_js_training.html
backend/api/: Dockerfile  build-v6.js  check-netlify.js  check-v6.js  check-v6b.js  fix-netlify.js  fix-title.js  (+15 more)
backend/services/router/: Cargo.toml  Dockerfile
backend/services/router/src/: main.rs
docs/: index.html  nexus-v8.html
scripts/: deploy-demo.js  deploy.sh  health-check.sh  setup.sh
(+59 files in other folders)
