[package]
name = "nexus-router"
version = "4.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
